--- a/src/main/resources/templates/ajouterLit.html
+++ b/src/main/resources/templates/ajouterLit.html
@@ -8,16 +8,51 @@
 
 </head>
 <body>
-	<h1>Ajouter un lit</h1>
+
+	<div class="parts">
+	<div class="part1">
 	<form action="sauvegarder" method="POST" th:Object="${lit}">
-		<h4>ETAT</h4>
-		<input type="text" name="etat" th:field="*{etat}">
+		<h1>Ajouter un lit</h1>
+		
 		<h4>TYPE</h4>
-		<input type="text" name="type" th:field="*{typeLit}">
+		<input type="number" name="type"  placeholder="NumEro de la type " th:field="*{typeLit}">
 		<h4>CHAMBRE</h4>
-		<input type="chambre" name="tel" th:field="*{chambre}">
-				
+		
+		<input type="number" name="tel"  placeholder="Numero de la chambre" th:field="*{chambre}">
 		<input type="submit" value="Ajouter">
 	</form>
+	</div>
+	
+	<div class="part2">
+	<h2>Liste des Types</h2>
+	<table class="tab">
+		<tr>
+			<th>Num</th>
+			<th>Libelle</th>
+			<th>prix par jour</th>
+		</tr>
+		<tr th:each="t : ${list_types}">
+			<td th:text = ${t.typeLitId}></td>
+			<td th:text = ${t.libelle}></td>
+			<td th:text = ${t.prixType}></td>
+		</tr>
+	</table>
+	
+	<h2>Liste des Chambres</h2>
+
+	<table class="tab">
+		<tr>
+			<th>Num</th>
+			<th>Departement</th>
+		</tr>
+		<tr th:each="Ch : ${list_chambres}">
+			<td th:text = ${Ch.chambreId}></td>
+			<td th:text = ${Ch.departement}></td>
+		</tr>
+	</table>
+	</div>
+	</div>
+	
+	
 </body>
 </html>
