modifier pation medecin + pagination medecin lit patient

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -94,3 +94,13 @@ table tr:nth-child(even){
 	width:40%;
 	margin:auto;
 }
+
+.hidden{
+	display:none;
+}
+
+
+.pages {
+	list-style: none;
+	display : inline;
+}
