--- a/src/main/resources/templates/ajouterPatient.html
+++ b/src/main/resources/templates/ajouterPatient.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Ajouter Patient</title>
+<title>Patient Form</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-	<h1>Ajouter Patient</h1>
+	<h1><span th:text="${what_to_do}"></span> Patient</h1>
 	<form action="sauvegarder" method="POST" th:Object="${patient}">
 		<h4>CIN</h4>
 		<input type="text" name="cin" th:field="*{cin}">
@@ -22,7 +22,17 @@
 		<h4>MALADIE</h4>
 		<input type="text" name="maladie" th:field="*{maladie}">
 		
+		<input type="text" name="maladie" class="hidden" th:field="*{etat_patient}">
+		
+		<span th:if="${what_to_do=='Ajouter ' }">
 		<input type="submit" value="Ajouter">
+		</span>
+		
+		<span th:if="${what_to_do=='Modifier '}">
+		<input type="submit" value="Modifier">
+		</span>
+		
+		
 	</form>
 </body>
 </html>
