--- a/src/main/resources/templates/listerPatients.html
+++ b/src/main/resources/templates/listerPatients.html
@@ -10,7 +10,7 @@
 	<h1>Patients</h1>
 	<a th:href="@{/patients/ajouter}">Ajouter un patient</a><br>
 	
-	<table th:if="${listePatients.size() > 0}">
+	<table th:if="${Patients_pages.content.size() > 0}">
 		<tr>
 			<th>CIN</th>
 			<th>Nom</th>
@@ -20,7 +20,7 @@
 			<th>Maladie</th>
 			<th>Affecte a un lit</th>
 		</tr>
-		<tr th:each="p : ${listePatients}">
+		<tr th:each="p : ${Patients_pages.content}">
 			<td th:text = ${p.cin}></td>
 			<td th:text = ${p.nom}></td>
 			<td th:text = ${p.prenom}></td>
@@ -28,10 +28,14 @@
 			<td th:text = ${p.email}></td>
 			<td th:text = ${p.maladie}></td>
 			<td th:text = "${p.etat_patient} ? 'oui' : 'non'"></td>
-			<td><a th:href = "@{/patients/supp(cin=${p.cin})}">Supprimer patient</a></td>	
+			<td><a th:href = "@{/patients/supp(cin=${p.cin})}">Supprimer patient</a></td>
+			<td><a th:href = "@{/patients/modif_P(cin=${p.cin})}">Modifier patient</a></td>
 		</tr>
 	</table>
-	<h3 th:if="${listePatients.size() == 0}">Liste vide</h3>
+	<ul>
+	<LI  class="pages" th:each="p:${pages}">&nbsp;&nbsp;[<a th:text=${p} th:href="@{liste(page=${p})}"/>]&nbsp;&nbsp;</LI>
+	</ul>
+	<h3 th:if="${Patients_pages.content.size() == 0}">Liste vide</h3>
 	<a href="/" th:href="@{/home}">Retour vers la page d'accueil</a>
 </body>
 </html>
