--- a/bin/src/main/resources/templates/affecter.html
+++ b/bin/src/main/resources/templates/affecter.html
@@ -10,7 +10,7 @@
 	<h1>Patients</h1>
 	<table th:if="${listePatients2.size() > 0}">
 		<tr>
-			<th>Id</th>
+			<th>CIN</th>
 			<th>Nom</th>
 			<th>Prenom</th>
 			<th>Numero du tel</th>
