--- a/bin/src/main/resources/templates/listerChambres.html
+++ b/bin/src/main/resources/templates/listerChambres.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Listes des chambres</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 	<h1>Chambres</h1>
-	<a th:href="@{/chambres/ajouter}">Ajouter une chambre</a><br>
+	<!-- <a th:href="@{/chambres/ajouter}">Ajouter une chambre</a><br> -->
 	
-	<table>
+	<table th:if="${listeChambres.size() > 0}">
 		<tr>
 			<th>Num</th>
 			<th>Departement</th>
@@ -16,8 +18,13 @@
 		<tr th:each="c : ${listeChambres}">
 			<td th:text = ${c.chambreId}></td>
 			<td th:text = ${c.departement}></td>
-			
+		</tr>
 	</table>
+	<tr><h3 th:if="${listeChambres.size() == 0}">Liste vide</h3></tr>
+	<a href="/" th:href="@{/home}">Retour vers la page d'accueil</a>
+	
+	<!-- footer -->
+	<div th:insert="footer :: footer"></div>
 
 </body>
 </html>
