--- a/bin/src/main/resources/templates/listerMedecins.html
+++ b/bin/src/main/resources/templates/listerMedecins.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Listes des medecins</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 	<h1>Medecins</h1>
 	<a th:href="@{/medecins/ajouter}">Ajouter un medecin</a><br>
 	
-	<table>
+	<table th:if="${pages_medecins.content.size() > 0}">
 		<tr>
 			<th>CIN</th>
 			<th>Nom</th>
@@ -18,16 +20,28 @@
 			<th>Departement</th>
 			<th>Specialite</th>
 		</tr>
-		<tr th:each="m : ${listeMedecins}">
+		<tr th:each="m : ${pages_medecins.content}">
 			<td th:text = ${m.cin}></td>
 			<td th:text = ${m.nom}></td>
 			<td th:text = ${m.prenom}></td>
 			<td th:text = ${m.tel}></td>
 			<td th:text = ${m.email}></td>
 			<td th:text = ${m.departement}></td>
-			<td th:text = ${m.specialite}></td>	
+			<td th:text = ${m.specialite}></td>
+			<td><a th:href = "@{/medecins/supp(cin=${m.cin})}">Supprimer medecin</a></td>
+			<td><a th:href = "@{/medecins/modif_M(cin=${m.cin})}" th:Object="${m}">Modifier medecin</a></td>
 		</tr>
 	</table>
+	
+	<ul>
+	<LI  class="pages" th:each="p:${pages}">&nbsp;&nbsp;[<a th:text=${p} th:href="@{liste(page=${p})}"/>]&nbsp;&nbsp;</LI>
+	</ul>
+	
+	
+	<h3 th:if="${pages_medecins.content.size() == 0}">Liste vide</h3>
+	<a href="/" th:href="@{/home}">Retour vers la page d'accueil</a>
 
+	<!-- footer -->
+	<div th:insert="footer :: footer"></div>
 </body>
 </html>
