--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,13 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<h1>Bonjour </h1>
+	<h1>Bonjour <span th:text="${session.admin.nom}"></span></h1>
 	<a th:href="@{/patients/liste}">Listes des patients</a><br>
 	<a th:href="@{/medecins/liste}">Listes des medecins</a><br>
 	<a th:href="@{/lits/liste}">Listes des lits</a><br>
 	<a th:href="@{/chambres/liste}">Listes des chambres</a><br>
 	<a th:href="@{/affecter_page}">Affecter un patient a un lit</a><br>
+	<a th:href="@{/logout}">Se deconnecter</a><br>
 	
 	<!-- footer -->
 	<div th:insert="footer :: footer"></div>
